# geometry-2d

./: .gitignore  README.md  geometry-2d.cabal  try-dimensional.cabal
src/: Circle.hs  Dimension.hs  Distance.hs  GeometryClasses.hs  Line.hs  Point.hs  Polygon.hs  Range.hs  Rectangle.hs  Triangle.hs  Vector.hs
tests/: CircleSpec.hs  DimensionSpec.hs  LineSpec.hs  PointSpec.hs  PolygonSpec.hs  RectangleSpec.hs  TriangleSpec.hs  VectorSpec.hs  test-circle.hs  test-dimension.hs  test-line.hs  tests.hs
