name:                  geometry-2d
version:               0.1.0.0
license:               BSD3
license-file:          LICENSE
author:                William Rusnack
maintainer:            williamrusnack@gmail.com
copyright:             2018 William Rusnack
category:              Web
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dimension
                     , Point
                     , Line
                     , Vector
                     , Circle
                     , Triangle
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite test-dimension
  hs-source-dirs:      tests
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , geometry-2d
  other-modules:       DimensionSpec
                     , PointSpec
                     , LineSpec
                     , CircleSpec
                     , TriangleSpec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010

source-repository head
  type:                git
  location:            https://github.com/BebeSparkelSparkel/try-dimensional
