name:                  try-dimensional
version:               0.1.0.0
-- synopsis:
-- description:
homepage:              https://github.com/BebeSparkelSparkel/try-dimensional#readme
license:               BSD3
license-file:          LICENSE
author:                William Rusnack
maintainer:            williamrusnack@gmail.com
copyright:             2018 William Rusnack
category:              Web
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Distance
  build-depends:       base >= 4.7 && < 5
                     , dimensional
  default-language:    Haskell2010

test-suite tests
  hs-source-dirs:      tests
  main-is:             tests.hs
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , try-dimensional
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010

source-repository head
  type:                git
  location:            https://github.com/BebeSparkelSparkel/try-dimensional
